--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.5.2",
+    "@popperjs/core": "^2.9.3",
+    "bootstrap": "^5.1.0",
+    "jquerry": "0.0.1-security",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -42,6 +45,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.2.0",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
